--- a/src/components/UI/navbar/Navbar.module.css
+++ b/src/components/UI/navbar/Navbar.module.css
@@ -1,29 +1,19 @@
 .navbar {
-  display: flex;
-  place-items: center;
   position: sticky;
-  flex-wrap: wrap;
-}
-
-nav {
 }
 
 ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   overflow: hidden;
   background-color: #666;
-}
-
-li {
-  float: left;
 }
 
 li a {
   display: block;
   color: white;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
