--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,7 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   font-family: "Space Mono", monospace;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
+.error {
+  position: absolute;
+}
+
+.error h1 {
+  color: red;
+}
