--- a/src/components/UI/input/Input.module.css
+++ b/src/components/UI/input/Input.module.css
@@ -1,6 +1,8 @@
 input {
   width: 100%;
   padding: 10px;
-  margin: 5px;
+  margin-bottom: 5px;
   border: 1px solid rgb(26, 24, 24);
+  box-sizing: border-box;
+  flex: 1 0 140px;
 }
