--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,6 +6,12 @@
   font-family: "Roboto", sans-serif;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .error h1 {
   color: red;
 }
