--- a/src/components/UI/button/Button.module.css
+++ b/src/components/UI/button/Button.module.css
@@ -1,12 +1,13 @@
 button {
   width: 100%;
-  color: rgb(255, 255, 255);
+  color: white;
   padding: 10px;
   margin-bottom: 5px;
   cursor: pointer;
   border: 1px solid rgb(26, 24, 24);
   background-color: #666;
   box-sizing: border-box;
+  font-size: 14px;
 }
 
 button:hover {
