--- a/src/components/style/LoginForm.module.css
+++ b/src/components/style/LoginForm.module.css
@@ -1,3 +1,11 @@
+.login {
+  inset: 0;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(235, 235, 235, 0.5);
+}
+
 form {
   position: fixed;
   top: 50%;
@@ -11,4 +19,9 @@ form {
   border: 2px solid rgb(26, 24, 24);
   border-radius: 10px;
   min-width: 220px;
+  background-color: white;
+}
+
+.hello {
+  margin-bottom: 10px;
 }
