--- a/src/components/UI/button/Button.module.css
+++ b/src/components/UI/button/Button.module.css
@@ -5,11 +5,11 @@ button {
   margin-bottom: 5px;
   cursor: pointer;
   border: 1px solid rgb(26, 24, 24);
-  background-color: #666;
+  background-color: #1a73e8;
   box-sizing: border-box;
   font-size: 14px;
 }
 
 button:hover {
-  background-color: #111;
+  background-color: #1a60e8;
 }
