add togle auth with react

--- a/src/components/style/LoginForm.module.css
+++ b/src/components/style/LoginForm.module.css
@@ -32,3 +32,13 @@ form {
 .link:hover {
   color: black;
 }
+
+.forgotDiv {
+  position: relative;
+  margin-bottom: 25px;
+}
+
+.forgotPassword {
+  position: absolute;
+  right: 0;
+}
