--- a/src/components/UI/navbar/Navbar.module.css
+++ b/src/components/UI/navbar/Navbar.module.css
@@ -1,4 +1,5 @@
 .navbar {
+  margin: 10px 0 10px 0;
   position: sticky;
 }
 
@@ -8,19 +9,29 @@ ul {
   justify-content: center;
   list-style-type: none;
   overflow: hidden;
-  background-color: #666;
+  background-color: #c2bcbcc0;
+  border-radius: 10px;
+}
+
+li {
   border-radius: 10px;
 }
 
 li a {
   display: block;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 14px 16px;
   text-decoration: none;
+  border-radius: 10px;
 }
 
 li a:hover {
-  transform: scale(1.1);
-  background-color: #111;
+  transform: scale(1.01);
+  background-color: #111111d0;
   border-radius: 10px;
+  color: white;
+}
+
+.logout:hover {
+  background-color: #ff0000bd;
 }
