--- a/src/components/UI/button/Button.module.css
+++ b/src/components/UI/button/Button.module.css
@@ -1,15 +1,15 @@
-button {
+.myButton {
   width: 100%;
-  color: white;
+  color: #fff;
   padding: 10px;
   margin-bottom: 5px;
   cursor: pointer;
   border: 1px solid rgb(26, 24, 24);
-  background-color: #1a73e8;
+  background-color: #007bff;
   box-sizing: border-box;
   font-size: 14px;
 }
 
-button:hover {
-  background-color: #1a60e8;
+.myButton:hover {
+  background-color: #0056b3;
 }
