--- a/src/components/postitem/PostItem.module.css
+++ b/src/components/postitem/PostItem.module.css
@@ -1,10 +1,18 @@
 .post_item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 16px;
   margin: 16px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  max-height: 146px;
+  min-height: 146px;
+  max-width: 320px;
+  min-width: 320px;
+  text-align: left;
 }
 
 .post_item h2 {
@@ -13,6 +21,7 @@
 }
 
 .post_item p {
+  overflow-wrap: break-word;
   font-size: 1rem;
   color: #333;
   margin-bottom: 5px;
